# HITL-POC

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  start.sh
backend/: README.md  pyproject.toml
backend/src/annotation/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/annotation/migrations/: 0001_initial.py
backend/src/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: ProjectList.vue  TextAnnotation.vue
frontend/src/router/: index.ts
tutorials/: api_examples.ipynb
